cmake_minimum_required(VERSION 3.16)
project(LearningCxxDay2)

set(CMAKE_CXX_STANDARD 11)

add_executable(LearningCxxDay2-1 01-ClassDesign/ClassDesign.cpp)

add_executable(LearningCxxDay2-2 02-InlineFunction/InlineFunction.cpp)

add_executable(LearningCxxDay2-3 03-DefaultAndPlaceHolderFunction/DefaultAndPlaceHolderFunction.cpp)