cmake_minimum_required(VERSION 3.16)
project(LearningCxxDay7)

set(CMAKE_CXX_STANDARD 11)

add_executable(LearningCxxDay7-1-1 01-Polymorphism/StaticLinkAndDynamicLink.cpp)
add_executable(LearningCxxDay7-1-2 01-Polymorphism/CalculatorCase.cpp)
add_executable(LearningCxxDay7-1-3 01-Polymorphism/VirtualDestruct.cpp)
add_executable(LearningCxxDay7-1-4 01-Polymorphism/ComputerAssembleCase.cpp)