cmake_minimum_required(VERSION 3.16)
project(LearningCxxDay8)

set(CMAKE_CXX_STANDARD 11)

add_executable(LearningCxxDay8-1-1 01-FunctionTemplate/FunctionTemplate.cpp)
add_executable(LearningCxxDay8-1-2 01-FunctionTemplate/GenericOrder.cpp)
add_executable(LearningCxxDay8-1-3 01-FunctionTemplate/DifferenceWithOrdinaryFunc.cpp)