cmake_minimum_required(VERSION 3.16)
project(LearningSTLDay1)

set(CMAKE_CXX_STANDARD 11)

add_executable(LearningSTLDay1-1 01-FirstTouch/FirstTouch.cpp)
add_executable(LearningSTLDay1-2 02-StringCollection/StringCollection.cpp)
add_executable(LearningSTLDay1-3 03-VectorCollection/VectorCollection.cpp)
add_executable(LearningSTLDay1-4 04-DequeCollection/DequeCollection.cpp)
add_executable(LearningSTLDay1-5 05-ExampleCase/ExampleCase.cpp)
add_executable(LearningSTLDay1-6 06-StackCollection/StackCollection.cpp)
add_executable(LearningSTLDay1-7 07-QueueCollection/QueueCollection.cpp)
add_executable(LearningSTLDay1-8 08-ListCollection/ListCollection.cpp)
add_executable(LearningSTLDay1-9 09-SetCollection/SetCollection.cpp)
add_executable(LearningSTLDay1-10 10-MapCollection/MapCollection.cpp)
